# py_search

./: .gitignore  .travis.yml  CHANGES.txt  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  examples.rst  index.rst  make.bat  problems.rst  py_search.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  py_search.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  py_search.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/py_search/: eight_puzzle.html  search.html
docs/_build/html/_sources/: index.txt  modules.txt  py_search.txt
docs/examples/: assignment_problem.rst  eight_puzzle.rst  graph_partition.rst  nqueens.rst
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
py_search/: assignment_problem.py  base.py  data_structures.py  eight_puzzle.py  informed.py  informed_search.py  local_search.py  optimization.py  search.py  uninformed.py  uninformed_search.py  utils.py
py_search/problems/: assignment_problem.py  eight_puzzle.py  graph.py  graph_partition.py  missionaries_and_cannibals.py  nqueens.py  try.py
py_search/simulations/: Expiramnet.py  plot.py
py_search/simulations/results/: compare_searches.csv  compare_searches_8_puzzle.csv  compare_searches_MissionariesAndCannibals.csv  compare_searches_graphs.csv
tests/: test_base.py  test_data_structures.py  test_informed.py  test_optimization.py  test_uninformed.py  test_utils.py
