[metadata]
name = py_search
author = Christopher J. MacLellan
author-email = maclellan.christopher@gmail.com
summary = A library of uninformed, informed and optimization search algorithms
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://pypi.python.org/pypi/py_search/
project_urls = 
    Documentation = http://py_search.readthedocs.org
    Source Code = https://github.com/cmaclell/py_search
license = MIT
license_file = LICENSE.txt
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: PyPy

[files]
package =
    py_search

[bdist_wheel]
universal=1
